objects/L2O_ManageInstallBase__mdt.object
<CustomObject>
    <description>To contain all the text from the flow Manage Install Base from Account object.</description>
    <fields>
        <fullName>L2O_AllContractsHeader__c</fullName>
        <label>L2O_AllContractsHeader</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_AmendAssetsOnly__c</fullName>
        <label>L2O_AmendAssetsOnly</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_AmendBothOption__c</fullName>
        <label>L2O_AmendBothOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_AmendOptionHeader__c</fullName>
        <label>L2O_AmendOptionHeader</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_AmendSubTypeHeader__c</fullName>
        <label>L2O_AmendSubTypeHeader</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_ChangeOrderOption__c</fullName>
        <label>L2O_ChangeOrderOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_ContractListNote2__c</fullName>
        <label>L2O_ContractListNote2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_ContractListNote__c</fullName>
        <label>L2O_ContractListNote</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_ContractPathChangeOption__c</fullName>
        <label>L2O_ContractPathChangeOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_CpqAccountAmendURL__c</fullName>
        <label>L2O_CpqAccountAmendURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_CpqContractAmendURL__c</fullName>
        <label>L2O_CpqContractAmendURL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_ExpansionOption__c</fullName>
        <label>L2O_ExpansionOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_RecontractingOption__c</fullName>
        <label>L2O_RecontractingOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>L2O_ManageInstallBase</label>
    <pluralLabel>L2O_ManageInstallBases</pluralLabel>
</CustomObject>